--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -1,5 +1,11 @@
+* {
+  transition: all 0.2s;
+  outline: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
 body {
   background-color: aliceblue;
+  margin: 0;
 
   .app {
     width: clamp(300px, 90%, 700px);
@@ -8,9 +14,32 @@ body {
     border-radius: 30px;
     padding: 30px;
     padding-top: 10px;
+
+    .top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
   h1 {
     margin: 0;
+  }
+  .login-page,
+  .register-page {
+    background-color: aliceblue;
+
+    .login,
+    .register {
+      width: clamp(200px, 500px, 90%);
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin: auto;
+      margin-top: 300px;
+      padding: 50px;
+      border-radius: 30px;
+      background-color: azure;
+    }
   }
   .header {
     display: flex;
@@ -30,6 +59,13 @@ body {
     border: none;
     padding: 2px 10px;
   }
+  .btn-main {
+    height: 36px;
+    font-size: 16px;
+    border-radius: 8px;
+    border: none;
+    padding: 2px 10px;
+  }
   input[type="checkbox"] {
     accent-color: green;
     width: 16px;
@@ -38,14 +74,12 @@ body {
   input[type="checkbox"]:hover {
     transform: scale(1.2);
   }
-
   .input {
     padding: 6px 12px;
     border-radius: 8px;
     border: 1px solid lightgray;
     font-size: 16px;
   }
-
   .tasks {
     .task {
       display: flex;
@@ -57,10 +91,4 @@ body {
       }
     }
   }
-}
-
-* {
-  transition: all 0.2s;
-  outline: none;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
